--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^8.0.2",
     "apollo-server-express": "^2.25.2",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "graphql": "^14.6.0",
     "graphql-tools": "^8.1.0",
