--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "class-validator": "^0.13.1",
     "graphql": "^14.6.0",
     "graphql-tools": "^8.1.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
